; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nfnetlink_log.c___nfulnl_flush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nfnetlink_log.c___nfulnl_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfulnl_instance = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfulnl_instance*)* @__nfulnl_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__nfulnl_flush(%struct.nfulnl_instance* %0) #0 {
  %2 = alloca %struct.nfulnl_instance*, align 8
  store %struct.nfulnl_instance* %0, %struct.nfulnl_instance** %2, align 8
  %3 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %2, align 8
  %4 = getelementptr inbounds %struct.nfulnl_instance, %struct.nfulnl_instance* %3, i32 0, i32 1
  %5 = call i64 @del_timer(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %2, align 8
  %9 = call i32 @instance_put(%struct.nfulnl_instance* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %2, align 8
  %12 = getelementptr inbounds %struct.nfulnl_instance, %struct.nfulnl_instance* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %2, align 8
  %17 = call i32 @__nfulnl_send(%struct.nfulnl_instance* %16)
  br label %18

18:                                               ; preds = %15, %10
  ret void
}

declare dso_local i64 @del_timer(i32*) #1

declare dso_local i32 @instance_put(%struct.nfulnl_instance*) #1

declare dso_local i32 @__nfulnl_send(%struct.nfulnl_instance*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
